// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree props: defaultValue: 1 mutliple: true onChange监听 1`] = `
.c4 {
  position: relative;
  background: #e3e3e6;
  width: 20px;
  height: 300px;
  border-radius: 5px;
  z-index: 996;
  width: 12px;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 8px;
  background: #49a9ee;
  color: #FFF;
  font-size: 1.2rem;
  line-height: 30px;
  text-align: center;
  width: 8px;
  margin-left: 2px;
  margin-right: 2px;
}

.c5:hover {
  background-color: #49a9ee96;
}

.c1 {
  height: 250px;
  width: 238px;
  position: absolute;
  display: inline-block;
}

.c3 {
  height: 250px;
  width: 238px;
  position: absolute;
  display: inline-block;
  left: 238px;
  width: 12px;
}

.c0 {
  overflow: hidden;
  height: 250px;
  width: 250px;
  position: relative;
}

.c2 {
  position: relative;
  top: 0px;
  width: 100%;
}

<div
  className="c0"
  onWheel={[Function]}
>
  <div
    className="c1"
  >
    <ul
      className="sv-tree sv-tree-show-line c2"
      role="tree-node"
      style={undefined}
      unselectable="on"
    >
      <li
        className=""
        unselectable="on"
      >
        <span
          className="sv-tree-switcher sv-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="sv-tree-checkbox sv-tree-checkbox-indeterminate"
          onClick={[Function]}
        >
          <span
            className="sv-tree-checkbox-inner"
          />
        </span>
        <span
          className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="1"
        >
          <span
            className="sv-tree-title"
          >
            1
          </span>
        </span>
        <ul
          className="sv-tree-child-tree sv-tree-child-tree-open"
          data-expanded={true}
        >
          <li
            className=""
            unselectable="on"
          >
            <span
              className="sv-tree-switcher sv-tree-switcher-noop"
            />
            <span
              className="sv-tree-checkbox"
              onClick={[Function]}
            >
              <span
                className="sv-tree-checkbox-inner"
              />
            </span>
            <span
              className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="1.1"
            >
              <span
                className="sv-tree-title"
              >
                1.1
              </span>
            </span>
          </li>
          <li
            className=""
            unselectable="on"
          >
            <span
              className="sv-tree-switcher sv-tree-switcher_open"
              onClick={[Function]}
            />
            <span
              className="sv-tree-checkbox"
              onClick={[Function]}
            >
              <span
                className="sv-tree-checkbox-inner"
              />
            </span>
            <span
              className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
              onClick={[Function]}
              onContextMenu={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="1.2"
            >
              <span
                className="sv-tree-title"
              >
                1.2
              </span>
            </span>
            <ul
              className="sv-tree-child-tree sv-tree-child-tree-open"
              data-expanded={true}
            >
              <li
                className=""
                unselectable="on"
              >
                <span
                  className="sv-tree-switcher sv-tree-switcher-noop"
                />
                <span
                  className="sv-tree-checkbox"
                  onClick={[Function]}
                >
                  <span
                    className="sv-tree-checkbox-inner"
                  />
                </span>
                <span
                  className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  title="1.2.1"
                >
                  <span
                    className="sv-tree-title"
                  >
                    1.2.1
                  </span>
                </span>
              </li>
              <li
                className=""
                unselectable="on"
              >
                <span
                  className="sv-tree-switcher sv-tree-switcher_open"
                  onClick={[Function]}
                />
                <span
                  className="sv-tree-checkbox"
                  onClick={[Function]}
                >
                  <span
                    className="sv-tree-checkbox-inner"
                  />
                </span>
                <span
                  className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  title="1.2.2"
                >
                  <span
                    className="sv-tree-title"
                  >
                    1.2.2
                  </span>
                </span>
                <ul
                  className="sv-tree-child-tree sv-tree-child-tree-open"
                  data-expanded={true}
                >
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher_open"
                      onClick={[Function]}
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.2.2.1"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.2.2.1
                      </span>
                    </span>
                    <ul
                      className="sv-tree-child-tree sv-tree-child-tree-open"
                      data-expanded={true}
                    >
                      <li
                        className=""
                        unselectable="on"
                      >
                        <span
                          className="sv-tree-switcher sv-tree-switcher-noop"
                        />
                        <span
                          className="sv-tree-checkbox"
                          onClick={[Function]}
                        >
                          <span
                            className="sv-tree-checkbox-inner"
                          />
                        </span>
                        <span
                          className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                          onClick={[Function]}
                          onContextMenu={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          title="1.2.2.1.1"
                        >
                          <span
                            className="sv-tree-title"
                          >
                            1.2.2.1.1
                          </span>
                        </span>
                      </li>
                      <li
                        className=""
                        unselectable="on"
                      >
                        <span
                          className="sv-tree-switcher sv-tree-switcher-noop"
                        />
                        <span
                          className="sv-tree-checkbox"
                          onClick={[Function]}
                        >
                          <span
                            className="sv-tree-checkbox-inner"
                          />
                        </span>
                        <span
                          className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                          onClick={[Function]}
                          onContextMenu={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          title="1.2.2.1.2"
                        >
                          <span
                            className="sv-tree-title"
                          >
                            1.2.2.1.2
                          </span>
                        </span>
                      </li>
                    </ul>
                  </li>
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher-noop"
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.2.2.2"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.2.2.2
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li
            className=""
            unselectable="on"
          >
            <span
              className="sv-tree-switcher sv-tree-switcher_open"
              onClick={[Function]}
            />
            <span
              className="sv-tree-checkbox"
              onClick={[Function]}
            >
              <span
                className="sv-tree-checkbox-inner"
              />
            </span>
            <span
              className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
              onClick={[Function]}
              onContextMenu={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="1.3"
            >
              <span
                className="sv-tree-title"
              >
                1.3
              </span>
            </span>
            <ul
              className="sv-tree-child-tree sv-tree-child-tree-open"
              data-expanded={true}
            >
              <li
                className=""
                unselectable="on"
              >
                <span
                  className="sv-tree-switcher sv-tree-switcher_open"
                  onClick={[Function]}
                />
                <span
                  className="sv-tree-checkbox"
                  onClick={[Function]}
                >
                  <span
                    className="sv-tree-checkbox-inner"
                  />
                </span>
                <span
                  className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  title="1.3.1"
                >
                  <span
                    className="sv-tree-title"
                  >
                    1.3.1
                  </span>
                </span>
                <ul
                  className="sv-tree-child-tree sv-tree-child-tree-open"
                  data-expanded={true}
                >
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher-noop"
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.3.1.1"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.3.1.1
                      </span>
                    </span>
                  </li>
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher-noop"
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.3.1.2"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.3.1.2
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
              <li
                className=""
                unselectable="on"
              >
                <span
                  className="sv-tree-switcher sv-tree-switcher_open"
                  onClick={[Function]}
                />
                <span
                  className="sv-tree-checkbox"
                  onClick={[Function]}
                >
                  <span
                    className="sv-tree-checkbox-inner"
                  />
                </span>
                <span
                  className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  title="1.3.2"
                >
                  <span
                    className="sv-tree-title"
                  >
                    1.3.2
                  </span>
                </span>
                <ul
                  className="sv-tree-child-tree sv-tree-child-tree-open"
                  data-expanded={true}
                >
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher-noop"
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.3.2.1"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.3.2.1
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "250px",
        }
      }
    >
      <div
        className="c5"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "119px",
            "top": "0px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Tree props: query: 2.1.2.1 expandAll: true mutliple: false 1`] = `
.c0 {
  position: relative;
  top: 0px;
  width: 100%;
}

<ul
  className="sv-tree sv-tree-show-line c0 sv-tree-show-line"
  role="tree-node"
  style={undefined}
  unselectable="on"
>
  <li
    className=""
    unselectable="on"
  >
    <span
      className="sv-tree-switcher sv-tree-switcher_open"
      onClick={[Function]}
    />
    <span
      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
      onClick={[Function]}
      onContextMenu={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="2"
    >
      <span
        className="sv-tree-title"
      >
        2
      </span>
    </span>
    <ul
      className="sv-tree-child-tree sv-tree-child-tree-open"
      data-expanded={true}
    >
      <li
        className=""
        unselectable="on"
      >
        <span
          className="sv-tree-switcher sv-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="2.1"
        >
          <span
            className="sv-tree-title"
          >
            2.1
          </span>
        </span>
        <ul
          className="sv-tree-child-tree sv-tree-child-tree-open"
          data-expanded={true}
        >
          <li
            className=""
            unselectable="on"
          >
            <span
              className="sv-tree-switcher sv-tree-switcher_open"
              onClick={[Function]}
            />
            <span
              className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
              onClick={[Function]}
              onContextMenu={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="2.1.2"
            >
              <span
                className="sv-tree-title"
              >
                2.1.2
              </span>
            </span>
            <ul
              className="sv-tree-child-tree sv-tree-child-tree-open"
              data-expanded={true}
            >
              <li
                className=""
                unselectable="on"
              >
                <span
                  className="sv-tree-switcher sv-tree-switcher-noop"
                />
                <span
                  className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  title="2.1.2.1"
                >
                  <span
                    className="sv-tree-title"
                  >
                    2.1.2.1
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Tree props: value: 1 mutliple: false onChange监听 limit 1`] = `
Array [
  .c4 {
  position: relative;
  background: #e3e3e6;
  width: 20px;
  height: 300px;
  border-radius: 5px;
  z-index: 996;
  width: 12px;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 8px;
  background: #49a9ee;
  color: #FFF;
  font-size: 1.2rem;
  line-height: 30px;
  text-align: center;
  width: 8px;
  margin-left: 2px;
  margin-right: 2px;
}

.c5:hover {
  background-color: #49a9ee96;
}

.c1 {
  height: 250px;
  width: 238px;
  position: absolute;
  display: inline-block;
}

.c3 {
  height: 250px;
  width: 238px;
  position: absolute;
  display: inline-block;
  left: 238px;
  width: 12px;
}

.c0 {
  overflow: hidden;
  height: 250px;
  width: 250px;
  position: relative;
}

.c2 {
  position: relative;
  top: 0px;
  width: 100%;
}

<div
    className="c0"
    onWheel={[Function]}
>
    <div
        className="c1"
    >
        <ul
            className="sv-tree sv-tree-show-line c2"
            role="tree-node"
            style={undefined}
            unselectable="on"
        >
            <li
                className=""
                unselectable="on"
            >
                <span
                    className="sv-tree-switcher sv-tree-switcher_open"
                    onClick={[Function]}
                />
                <span
                    className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open sv-tree-node-selected"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    title="1"
                >
                    <span
                        className="sv-tree-title"
                    >
                        1
                    </span>
                </span>
                <ul
                    className="sv-tree-child-tree sv-tree-child-tree-open"
                    data-expanded={true}
                >
                    <li
                        className=""
                        unselectable="on"
                    >
                        <span
                            className="sv-tree-switcher sv-tree-switcher-noop"
                        />
                        <span
                            className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="1.1"
                        >
                            <span
                                className="sv-tree-title"
                            >
                                1.1
                            </span>
                        </span>
                    </li>
                    <li
                        className=""
                        unselectable="on"
                    >
                        <span
                            className="sv-tree-switcher sv-tree-switcher_open"
                            onClick={[Function]}
                        />
                        <span
                            className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="1.2"
                        >
                            <span
                                className="sv-tree-title"
                            >
                                1.2
                            </span>
                        </span>
                        <ul
                            className="sv-tree-child-tree sv-tree-child-tree-open"
                            data-expanded={true}
                        >
                            <li
                                className=""
                                unselectable="on"
                            >
                                <span
                                    className="sv-tree-switcher sv-tree-switcher-noop"
                                />
                                <span
                                    className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                                    onClick={[Function]}
                                    onContextMenu={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    title="1.2.1"
                                >
                                    <span
                                        className="sv-tree-title"
                                    >
                                        1.2.1
                                    </span>
                                </span>
                            </li>
                            <li
                                className=""
                                unselectable="on"
                            >
                                <span
                                    className="sv-tree-switcher sv-tree-switcher_open"
                                    onClick={[Function]}
                                />
                                <span
                                    className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                                    onClick={[Function]}
                                    onContextMenu={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    title="1.2.2"
                                >
                                    <span
                                        className="sv-tree-title"
                                    >
                                        1.2.2
                                    </span>
                                </span>
                                <ul
                                    className="sv-tree-child-tree sv-tree-child-tree-open"
                                    data-expanded={true}
                                >
                                    <li
                                        className=""
                                        unselectable="on"
                                    >
                                        <span
                                            className="sv-tree-switcher sv-tree-switcher_open"
                                            onClick={[Function]}
                                        />
                                        <span
                                            className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                                            onClick={[Function]}
                                            onContextMenu={[Function]}
                                            onMouseEnter={[Function]}
                                            onMouseLeave={[Function]}
                                            title="1.2.2.1"
                                        >
                                            <span
                                                className="sv-tree-title"
                                            >
                                                1.2.2.1
                                            </span>
                                        </span>
                                        <ul
                                            className="sv-tree-child-tree sv-tree-child-tree-open"
                                            data-expanded={true}
                                        >
                                            <li
                                                className=""
                                                unselectable="on"
                                            >
                                                <span
                                                    className="sv-tree-switcher sv-tree-switcher-noop"
                                                />
                                                <span
                                                    className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                                                    onClick={[Function]}
                                                    onContextMenu={[Function]}
                                                    onMouseEnter={[Function]}
                                                    onMouseLeave={[Function]}
                                                    title="1.2.2.1.1"
                                                >
                                                    <span
                                                        className="sv-tree-title"
                                                    >
                                                        1.2.2.1.1
                                                    </span>
                                                </span>
                                            </li>
                                            <li
                                                className=""
                                                unselectable="on"
                                            >
                                                <span
                                                    className="sv-tree-switcher sv-tree-switcher-noop"
                                                />
                                                <span
                                                    className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                                                    onClick={[Function]}
                                                    onContextMenu={[Function]}
                                                    onMouseEnter={[Function]}
                                                    onMouseLeave={[Function]}
                                                    title="1.2.2.1.2"
                                                >
                                                    <span
                                                        className="sv-tree-title"
                                                    >
                                                        1.2.2.1.2
                                                    </span>
                                                </span>
                                            </li>
                                        </ul>
                                    </li>
                                    <li
                                        className=""
                                        unselectable="on"
                                    >
                                        <span
                                            className="sv-tree-switcher sv-tree-switcher-noop"
                                        />
                                        <span
                                            className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                                            onClick={[Function]}
                                            onContextMenu={[Function]}
                                            onMouseEnter={[Function]}
                                            onMouseLeave={[Function]}
                                            title="1.2.2.2"
                                        >
                                            <span
                                                className="sv-tree-title"
                                            >
                                                1.2.2.2
                                            </span>
                                        </span>
                                    </li>
                                </ul>
                            </li>
                        </ul>
                    </li>
                    <li
                        className=""
                        unselectable="on"
                    >
                        <span
                            className="sv-tree-switcher sv-tree-switcher_open"
                            onClick={[Function]}
                        />
                        <span
                            className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                            onClick={[Function]}
                            onContextMenu={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            title="1.3"
                        >
                            <span
                                className="sv-tree-title"
                            >
                                1.3
                            </span>
                        </span>
                        <ul
                            className="sv-tree-child-tree sv-tree-child-tree-open"
                            data-expanded={true}
                        >
                            <li
                                className=""
                                unselectable="on"
                            >
                                <span
                                    className="sv-tree-switcher sv-tree-switcher_open"
                                    onClick={[Function]}
                                />
                                <span
                                    className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                                    onClick={[Function]}
                                    onContextMenu={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    title="1.3.1"
                                >
                                    <span
                                        className="sv-tree-title"
                                    >
                                        1.3.1
                                    </span>
                                </span>
                                <ul
                                    className="sv-tree-child-tree sv-tree-child-tree-open"
                                    data-expanded={true}
                                >
                                    <li
                                        className=""
                                        unselectable="on"
                                    >
                                        <span
                                            className="sv-tree-switcher sv-tree-switcher-noop"
                                        />
                                        <span
                                            className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                                            onClick={[Function]}
                                            onContextMenu={[Function]}
                                            onMouseEnter={[Function]}
                                            onMouseLeave={[Function]}
                                            title="1.3.1.1"
                                        >
                                            <span
                                                className="sv-tree-title"
                                            >
                                                1.3.1.1
                                            </span>
                                        </span>
                                    </li>
                                    <li
                                        className=""
                                        unselectable="on"
                                    >
                                        <span
                                            className="sv-tree-switcher sv-tree-switcher-noop"
                                        />
                                        <span
                                            className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                                            onClick={[Function]}
                                            onContextMenu={[Function]}
                                            onMouseEnter={[Function]}
                                            onMouseLeave={[Function]}
                                            title="1.3.1.2"
                                        >
                                            <span
                                                className="sv-tree-title"
                                            >
                                                1.3.1.2
                                            </span>
                                        </span>
                                    </li>
                                </ul>
                            </li>
                            <li
                                className=""
                                unselectable="on"
                            >
                                <span
                                    className="sv-tree-switcher sv-tree-switcher_open"
                                    onClick={[Function]}
                                />
                                <span
                                    className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                                    onClick={[Function]}
                                    onContextMenu={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    title="1.3.2"
                                >
                                    <span
                                        className="sv-tree-title"
                                    >
                                        1.3.2
                                    </span>
                                </span>
                                <ul
                                    className="sv-tree-child-tree sv-tree-child-tree-open"
                                    data-expanded={true}
                                >
                                    <li
                                        className=""
                                        unselectable="on"
                                    >
                                        <span
                                            className="sv-tree-switcher sv-tree-switcher-noop"
                                        />
                                        <span
                                            className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                                            onClick={[Function]}
                                            onContextMenu={[Function]}
                                            onMouseEnter={[Function]}
                                            onMouseLeave={[Function]}
                                            title="1.3.2.1"
                                        >
                                            <span
                                                className="sv-tree-title"
                                            >
                                                1.3.2.1
                                            </span>
                                        </span>
                                    </li>
                                </ul>
                            </li>
                        </ul>
                    </li>
                </ul>
            </li>
        </ul>
    </div>
    <div
        className="c3"
    >
        <div
            className="c4"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseUp={[Function]}
            onWheel={[Function]}
            style={
                Object {
                    "height": "250px",
                  }
            }
        >
            <div
                className="c5"
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                style={
                    Object {
                        "height": "119px",
                        "top": "0px",
                      }
                }
            />
        </div>
    </div>
</div>,
  <button
    onClick={[Function]}
/>,
]
`;

exports[`Tree props: value: 1 mutliple: true onChange监听 limit 1`] = `
.c4 {
  position: relative;
  background: #e3e3e6;
  width: 20px;
  height: 300px;
  border-radius: 5px;
  z-index: 996;
  width: 12px;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  text-align: center;
  border-radius: 8px;
  background: #49a9ee;
  color: #FFF;
  font-size: 1.2rem;
  line-height: 30px;
  text-align: center;
  width: 8px;
  margin-left: 2px;
  margin-right: 2px;
}

.c5:hover {
  background-color: #49a9ee96;
}

.c1 {
  height: 250px;
  width: 238px;
  position: absolute;
  display: inline-block;
}

.c3 {
  height: 250px;
  width: 238px;
  position: absolute;
  display: inline-block;
  left: 238px;
  width: 12px;
}

.c0 {
  overflow: hidden;
  height: 250px;
  width: 250px;
  position: relative;
}

.c2 {
  position: relative;
  top: 0px;
  width: 100%;
}

<div
  className="c0"
  onWheel={[Function]}
>
  <div
    className="c1"
  >
    <ul
      className="sv-tree sv-tree-show-line c2"
      role="tree-node"
      style={undefined}
      unselectable="on"
    >
      <li
        className=""
        unselectable="on"
      >
        <span
          className="sv-tree-switcher sv-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="sv-tree-checkbox sv-tree-checkbox-indeterminate"
          onClick={[Function]}
        >
          <span
            className="sv-tree-checkbox-inner"
          />
        </span>
        <span
          className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="1"
        >
          <span
            className="sv-tree-title"
          >
            1
          </span>
        </span>
        <ul
          className="sv-tree-child-tree sv-tree-child-tree-open"
          data-expanded={true}
        >
          <li
            className=""
            unselectable="on"
          >
            <span
              className="sv-tree-switcher sv-tree-switcher-noop"
            />
            <span
              className="sv-tree-checkbox"
              onClick={[Function]}
            >
              <span
                className="sv-tree-checkbox-inner"
              />
            </span>
            <span
              className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="1.1"
            >
              <span
                className="sv-tree-title"
              >
                1.1
              </span>
            </span>
          </li>
          <li
            className=""
            unselectable="on"
          >
            <span
              className="sv-tree-switcher sv-tree-switcher_open"
              onClick={[Function]}
            />
            <span
              className="sv-tree-checkbox"
              onClick={[Function]}
            >
              <span
                className="sv-tree-checkbox-inner"
              />
            </span>
            <span
              className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
              onClick={[Function]}
              onContextMenu={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="1.2"
            >
              <span
                className="sv-tree-title"
              >
                1.2
              </span>
            </span>
            <ul
              className="sv-tree-child-tree sv-tree-child-tree-open"
              data-expanded={true}
            >
              <li
                className=""
                unselectable="on"
              >
                <span
                  className="sv-tree-switcher sv-tree-switcher-noop"
                />
                <span
                  className="sv-tree-checkbox"
                  onClick={[Function]}
                >
                  <span
                    className="sv-tree-checkbox-inner"
                  />
                </span>
                <span
                  className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  title="1.2.1"
                >
                  <span
                    className="sv-tree-title"
                  >
                    1.2.1
                  </span>
                </span>
              </li>
              <li
                className=""
                unselectable="on"
              >
                <span
                  className="sv-tree-switcher sv-tree-switcher_open"
                  onClick={[Function]}
                />
                <span
                  className="sv-tree-checkbox"
                  onClick={[Function]}
                >
                  <span
                    className="sv-tree-checkbox-inner"
                  />
                </span>
                <span
                  className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  title="1.2.2"
                >
                  <span
                    className="sv-tree-title"
                  >
                    1.2.2
                  </span>
                </span>
                <ul
                  className="sv-tree-child-tree sv-tree-child-tree-open"
                  data-expanded={true}
                >
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher_open"
                      onClick={[Function]}
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.2.2.1"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.2.2.1
                      </span>
                    </span>
                    <ul
                      className="sv-tree-child-tree sv-tree-child-tree-open"
                      data-expanded={true}
                    >
                      <li
                        className=""
                        unselectable="on"
                      >
                        <span
                          className="sv-tree-switcher sv-tree-switcher-noop"
                        />
                        <span
                          className="sv-tree-checkbox"
                          onClick={[Function]}
                        >
                          <span
                            className="sv-tree-checkbox-inner"
                          />
                        </span>
                        <span
                          className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                          onClick={[Function]}
                          onContextMenu={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          title="1.2.2.1.1"
                        >
                          <span
                            className="sv-tree-title"
                          >
                            1.2.2.1.1
                          </span>
                        </span>
                      </li>
                      <li
                        className=""
                        unselectable="on"
                      >
                        <span
                          className="sv-tree-switcher sv-tree-switcher-noop"
                        />
                        <span
                          className="sv-tree-checkbox"
                          onClick={[Function]}
                        >
                          <span
                            className="sv-tree-checkbox-inner"
                          />
                        </span>
                        <span
                          className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                          onClick={[Function]}
                          onContextMenu={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          title="1.2.2.1.2"
                        >
                          <span
                            className="sv-tree-title"
                          >
                            1.2.2.1.2
                          </span>
                        </span>
                      </li>
                    </ul>
                  </li>
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher-noop"
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.2.2.2"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.2.2.2
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li
            className=""
            unselectable="on"
          >
            <span
              className="sv-tree-switcher sv-tree-switcher_open"
              onClick={[Function]}
            />
            <span
              className="sv-tree-checkbox"
              onClick={[Function]}
            >
              <span
                className="sv-tree-checkbox-inner"
              />
            </span>
            <span
              className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
              onClick={[Function]}
              onContextMenu={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="1.3"
            >
              <span
                className="sv-tree-title"
              >
                1.3
              </span>
            </span>
            <ul
              className="sv-tree-child-tree sv-tree-child-tree-open"
              data-expanded={true}
            >
              <li
                className=""
                unselectable="on"
              >
                <span
                  className="sv-tree-switcher sv-tree-switcher_open"
                  onClick={[Function]}
                />
                <span
                  className="sv-tree-checkbox"
                  onClick={[Function]}
                >
                  <span
                    className="sv-tree-checkbox-inner"
                  />
                </span>
                <span
                  className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  title="1.3.1"
                >
                  <span
                    className="sv-tree-title"
                  >
                    1.3.1
                  </span>
                </span>
                <ul
                  className="sv-tree-child-tree sv-tree-child-tree-open"
                  data-expanded={true}
                >
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher-noop"
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.3.1.1"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.3.1.1
                      </span>
                    </span>
                  </li>
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher-noop"
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.3.1.2"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.3.1.2
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
              <li
                className=""
                unselectable="on"
              >
                <span
                  className="sv-tree-switcher sv-tree-switcher_open"
                  onClick={[Function]}
                />
                <span
                  className="sv-tree-checkbox"
                  onClick={[Function]}
                >
                  <span
                    className="sv-tree-checkbox-inner"
                  />
                </span>
                <span
                  className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-open"
                  onClick={[Function]}
                  onContextMenu={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  title="1.3.2"
                >
                  <span
                    className="sv-tree-title"
                  >
                    1.3.2
                  </span>
                </span>
                <ul
                  className="sv-tree-child-tree sv-tree-child-tree-open"
                  data-expanded={true}
                >
                  <li
                    className=""
                    unselectable="on"
                  >
                    <span
                      className="sv-tree-switcher sv-tree-switcher-noop"
                    />
                    <span
                      className="sv-tree-checkbox"
                      onClick={[Function]}
                    >
                      <span
                        className="sv-tree-checkbox-inner"
                      />
                    </span>
                    <span
                      className="sv-tree-node-content-wrapper sv-tree-node-content-wrapper-normal"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      title="1.3.2.1"
                    >
                      <span
                        className="sv-tree-title"
                      >
                        1.3.2.1
                      </span>
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onWheel={[Function]}
      style={
        Object {
          "height": "250px",
        }
      }
    >
      <div
        className="c5"
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        style={
          Object {
            "height": "119px",
            "top": "0px",
          }
        }
      />
    </div>
  </div>
</div>
`;
